# I2C-Controller

./: Ardelve Test.workspace  Makefile
ARDELVEgusto/: ARDELVEcommands.cpp  ARDELVEcommands.h  Address.h  MK7013Scripts.cpp  OTPregisters.h  PADconfiguration.h  Readme  hello.mk  hello.project  hello.txt  main.cpp  moduleCS.h  moduleESD.h  moduleFAULT.h  moduleOTP.h  moduleOUT1.h  moduleOUT2.h  moduleOUT3A.h  moduleOUT3B.h  moduleQPMP.h  moduleSEQUENCER.cpp  moduleSEQUENCER.h  moduleSERVICE1.cpp  moduleSERVICE1.h  moduleSERVICE2.cpp  moduleSERVICE2.h
ARDELVEgusto/Release/: MK7013Scripts.cpp.o.d  OTPCommands.cpp.o.d  hello
ARDELVEmk7013/: ARDELVEmk7013.mk  ARDELVEmk7013.project  ARDELVEmk7013.txt  CMakeLists.txt
ARDELVEmk7013/Debug/: ARDELVEcommands.cpp.o.d  ARDELVEmk7013  MK7013Scripts.cpp.o.d  moduleSEQUENCER.cpp.o.d  moduleSERVICE1.cpp.o.d  moduleSERVICE2.cpp.o.d
ARDELVEmk7013/Release/: GENERALcommands.cpp.o.d  I2Ccommands.cpp.o.d  MK7013Scripts.cpp.o.d  OTPCommands.cpp.o.d  PADcommands.cpp.o.d  TESTMODEcommands.cpp.o.d  moduleSERVICE1.cpp.o.d
